<resources>
    <string name="app_name">Calories Lookout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="channel_name">MyCalories</string>
    <string name="channel_description">Follow your calories budget and do not give up</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <style name="Widget.Unscramble.TextInputLayout.OutlinedBox" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <item name="helperTextTextAppearance">@style/TextAppearance.MaterialComponents.Subtitle1
        </item>
    </style>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="select">Select</string>
    <string name="upload">Upload</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="soon">* Soon</string>
    <string name="notification">Notification</string>
    <string name="calories">Calories:</string>
    <string name="recipe">Recipe</string>
    <string name="height">height</string>
    <string name="age">age</string>
    <string name="weight">Weight</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="calculate">Calculate</string>
    <string name="mycalories">MyCalories</string>
    <string name="signin">SignIn</string>
    <string name="no_result">No Result</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="logout">LogOut</string>
</resources>

