<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        style="@style/background">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10sp"
        style="@style/card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingBottom="20sp"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/calorieslogos" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weight_label"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/weight"
            style="@style/Widget.Unscramble.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="@id/logo"
            app:layout_constraintEnd_toEndOf="@id/logo"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_marginEnd="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="20sp"
                android:inputType="number"
                android:digits="0123456789."
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/height_label"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/height"
            style="@style/Widget.Unscramble.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="@id/weight_label"
            app:layout_constraintEnd_toEndOf="@id/weight_label"
            app:layout_constraintTop_toBottomOf="@id/weight_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_marginEnd="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="20sp"
                android:inputType="number"
                android:digits="0123456789."
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age_label"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/age"
            style="@style/Widget.Unscramble.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="@id/weight_label"
            app:layout_constraintEnd_toEndOf="@id/weight_label"
            app:layout_constraintTop_toBottomOf="@id/height_label" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_marginEnd="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="20sp"
                android:inputType="number"
                android:digits="0123456789."
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/chooseButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginStart="30dp"
            app:layout_constraintEnd_toEndOf="@id/weight_label"
            app:layout_constraintStart_toStartOf="@id/weight_label"
            app:layout_constraintTop_toBottomOf="@id/age_label"
            style="@style/text">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/female"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20sp"/>

        </RadioGroup>

        <Button
            android:id="@+id/cacculate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/round_corner_top"
            style="@style/button"
            app:layout_constraintStart_toStartOf="@id/weight_label"
            app:layout_constraintEnd_toEndOf="@id/weight_label"
            app:layout_constraintTop_toBottomOf="@id/chooseButton"/>

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/weight_label"
            app:layout_constraintStart_toStartOf="@id/weight_label"
            app:layout_constraintTop_toBottomOf="@id/cacculate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    </ScrollView>

</layout>